changing to table form

--- a/index.html
+++ b/index.html
@@ -31,8 +31,22 @@
     </div>
 
 
-    <div id="result"></div>
-
+    <div id="result">
+        <h2>Historical Prices</h2>
+        <table id="priceTable" border="1" cellpadding="10" cellspacing="0">
+            <thead>
+                <tr>
+                    <th>DateTime</th>
+                    <th>Open</th>
+                    <th>High</th>
+                    <th>Low</th>
+                    <th>Close</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Rows will be inserted dynamically here by JavaScript -->
+            </tbody>
+        </table>
     </div>
 
 
