--- a/index.html
+++ b/index.html
@@ -6,49 +6,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Industrial Project</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <div id="container">
-        <div id="search-container">
-            <label>
-                <h1>Which pair would you like to search for?:</h1>
-                <input type="text" id="search-pair">
-                <input type="date" id="startDate">
-                <input type="date" id="endDate">
-                <label>Time Interval</label>
-                <select id="timeinterval">
-                    <option value="30min">30 min</option>
-                    <option value="4hours">4h</option>
-                    <option value="1day">1 Day</option>
-                    <option value="1week">1 Week</option>
-                </select>
-            </label>
+<body style="background-image: url('images/starry_night.jpeg');">
 
+    <!--Weather Condition Display starts here-->
+
+    <div class="d-flex justify-content-center">
+        <div class="col-10 col-md-4 col-lg-4 bg-primary bg-gradient p-3 rounded mt-5">
+         
+            <div class="weather img-fluid mb-3">
+                <img src=" " alt="Partly Cloudy Icon">
+                <h2 class="city">Singapore</h2>
+                <h1 class="Temp">22°C</h1>  
+            </div>
         </div>
-        <button id="search-button">Enter</button>
+    </div>
+    <!--Stock, FX, BTC starts here-->
+    <div id="container">
+        <section class="d-flex justify-content-left my-4">
+            <div class="col-12 col-md-8 col-lg-6 bg-secondary bg-gradient p-3 rounded opacity-50">
+                <h1 class="text-black text-center">Search for Historical Prices</h1>
+                <div class="form-group mb-3 background-color:grey;">
+                    <input type="text" id="search-pair" class="form-control" placeholder="Enter pair (e.g., EUR/USD)">
+                </div>
+                <div class="form-group mb-3">
+                    <label for="startDate" class="text-white">Start Date</label>
+                    <input type="date" id="startDate" class="form-control">
+                </div>
+                <div class="form-group mb-3">
+                    <label for="endDate" class="text-white">End Date</label>
+                    <input type="date" id="endDate" class="form-control">
+                </div>
+                <div class="form-group mb-3">
+                    <label for="timeinterval" class="text-white">Time Interval</label>
+                    <select id="timeinterval" class="form-select">
+                        <option value="30min">30 min</option>
+                        <option value="4h">4 hours</option>
+                        <option value="1day">1 Day</option>
+                        <option value="1week">1 Week</option>
+                    </select>
+                </div>
+                <div class="text-center">
+                    <button id="search-button" class="btn btn-light">Enter</button>
+                </div>
+            </div>
+        </section>
+
+
+        <div id="result" class="col-12 col-lg-5 mb-1">
+            <!-- Scrollable container for the table -->
+            <div class="bg-primary bg-primary p-1"
+                style="max-height: 300px; overflow-y: auto; border-radius: 8px; padding: 10px;">
+                <h2>Historical Prices</h2>
+                <table id="priceTable" class="table-primary">
+                    <thead>
+                        <!--row and header goes here-->
+                        <tr>
+                            <th class ="d-inline justify-content-left">DateTime</th>
+                            <th class ="d-inline justify-content-center">Open</th>
+                            <th class ="d-inline justify-content-center">High</th>
+                            <th class ="d-inline justify-content-right">Low</th>
+                            <th class ="d-inline justify-content-right">Close</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Rows will be inserted dynamically here by JavaScript -->
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 
 
-    <div id="result">
-        <h2>Historical Prices</h2>
-        <table id="priceTable" border="1" cellpadding="10" cellspacing="0">
-            <thead>
-                <tr>
-                    <th>DateTime</th>
-                    <th>Open</th>
-                    <th>High</th>
-                    <th>Low</th>
-                    <th>Close</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Rows will be inserted dynamically here by JavaScript -->
-            </tbody>
-        </table>
-    </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.7/axios.min.js"
         integrity="sha512-DdX/YwF5e41Ok+AI81HI8f5/5UsoxCVT9GKYZRIzpLxb8Twz4ZwPPX+jQMwMhNQ9b5+zDEefc+dcvQoPWGNZ3g=="
