added clock and broker layout without any js

--- a/index.html
+++ b/index.html
@@ -14,20 +14,118 @@
 <body style="background-image: url('images/starry_night.jpeg');">
 
     <!--Weather Condition Display starts here-->
-
     <div class="d-flex justify-content-center">
-        <div class="col-10 col-md-4 col-lg-4 bg-primary bg-gradient p-3 rounded mt-5">
-         
-            <div class="weather img-fluid mb-3">
-                <img src=" " alt="Partly Cloudy Icon">
-                <h2 class="city">Singapore</h2>
-                <h1 class="Temp">22°C</h1>  
+        <div class="col-10 col-md-4 col-lg-3 bg-primary bg-gradient p-3 rounded mt-5">
+
+            <div class="weather card-body">
+                <div class="row no-gutters align-items-center">
+                    <div class="col mr-2">
+                        <img src=" " alt="Partly Cloudy Icon">
+                        <h2 class="city">Singapore</h2>
+                        <h1 class="Temp">22°C</h1>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+    <!--World Clock starts here-->
+    <section class="world clock section-padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="world clock section-title text center mb-40">
+                        <h2>World Clcok</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
+                    <div class="clock mb-30 text-center">
+                        <!--clock APi goes here-->
+                        <div class="clock">
+                            <image src="icons/new_york.png" alt=""></image>
+                            <div class="clock details">
+                                <h3>New York</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
+                    <div class="clock mb-30 text-center">
+                        <!--clock APi goes here-->
+                        <div class="clock">
+                            <image src="icons/Singapore.png" alt=""></image>
+                            <div class="clock details">
+                                <h3>Singapore</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
+                    <div class="clock mb-30 text-center">
+                        <!--clock APi goes here-->
+                        <div class="clock">
+                            <image src="icons/Australia.png" alt=""></image>
+                            <div class="clock details">
+                                <h3>Australia</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
+                    <div class="clock mb-30 text-center">
+                        <!--clock APi goes here-->
+                        <div class="clock">
+                            <image src="icons/hong_kong.png" alt=""></image>
+                            <div class="clock details">
+                                <h3 class>Hong Kong</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--My Broker starts here-->
+    <div class="container-fluid d-flex justify-content-center align-items-center vh-10" style="max-width: 50rem;">
+        <div class="row">
+            <div class="col-4 col-sm-4 mt-5">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Broker's Name</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <a href="#" class="btn btn-primary">Place Order</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 col-sm-4 mt-5">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Broker's Name</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <a href="#" class="btn btn-primary">Place Order</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 col-sm-4 mt-5">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Broker's Name</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <a href="#" class="btn btn-primary">Place Order</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!--Stock, FX, BTC starts here-->
     <div id="container">
-        <section class="d-flex justify-content-left my-4">
+        <section class="d-flex justify-content-center my-4">
             <div class="col-12 col-md-8 col-lg-6 bg-secondary bg-gradient p-3 rounded opacity-50">
                 <h1 class="text-black text-center">Search for Historical Prices</h1>
                 <div class="form-group mb-3 background-color:grey;">
@@ -55,31 +153,32 @@
                 </div>
             </div>
         </section>
+    </div>
 
 
-        <div id="result" class="col-12 col-lg-5 mb-1">
-            <!-- Scrollable container for the table -->
-            <div class="bg-primary bg-primary p-1"
-                style="max-height: 300px; overflow-y: auto; border-radius: 8px; padding: 10px;">
-                <h2>Historical Prices</h2>
-                <table id="priceTable" class="table-primary">
-                    <thead>
-                        <!--row and header goes here-->
-                        <tr>
-                            <th class ="d-inline justify-content-left">DateTime</th>
-                            <th class ="d-inline justify-content-center">Open</th>
-                            <th class ="d-inline justify-content-center">High</th>
-                            <th class ="d-inline justify-content-right">Low</th>
-                            <th class ="d-inline justify-content-right">Close</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!-- Rows will be inserted dynamically here by JavaScript -->
-                    </tbody>
-                </table>
-            </div>
+    <div id="result" class="col-12 col-lg-5 mb-1">
+        <!-- Scrollable container for the table -->
+        <div class="bg-primary bg-primary p-1"
+            style="max-height: 300px; overflow-y: auto; border-radius: 8px; padding: 10px;">
+            <h2>Historical Prices</h2>
+            <table id="priceTable" class="table-primary">
+                <thead>
+                    <!--row and header goes here-->
+                    <tr>
+                        <th class="d-inline justify-content-left">DateTime</th>
+                        <th class="d-inline justify-content-center">Open</th>
+                        <th class="d-inline justify-content-center">High</th>
+                        <th class="d-inline justify-content-right">Low</th>
+                        <th class="d-inline justify-content-right">Close</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Rows will be inserted dynamically here by JavaScript -->
+                </tbody>
+            </table>
         </div>
     </div>
+
 
 
 
