changes to the  clock session

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <section class="world clock section-padding">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <div class="world clock section-title text center mb-40">
+                <div class="d-flex justify-content-center">
+                    <div class="col-lg-12">
                         <h2>World Clcok</h2>
                     </div>
                 </div>
