--- a/index.html
+++ b/index.html
@@ -14,23 +14,71 @@
 <body style="background-image: url('images/starry_night.jpeg');">
 
     <!--Weather Condition Display starts here-->
-    <div class="d-flex justify-content-center">
-        <div class="col-10 col-md-4 col-lg-3 bg-primary bg-gradient p-3 rounded mt-5">
+    <div class="news-container-fluid col-12 col-lg-10 col-sm-10 mx-auto mt-5">
+        <span class="border border-primary-subtle">
+            <div class="bg--info-subtle bg-gradient p-1">
+                
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
 
-            <div class="weather card-body">
-                <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                        <img src=" " alt="Partly Cloudy Icon">
-                        <h2 class="city">Singapore</h2>
-                        <h1 class="Temp">22°C</h1>
+                        <div class="weather card-body">
+                            <div class="row no-gutters align-items-end">
+                                <div class="col mr-2">
+                                    <img src=" " alt="Partly Cloudy Icon">
+                                    <h2 class="city"></h2>
+                                    <h1 class="Temp"></h1>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                
+            </div>
+            <div class="row justify-content-md-center">
+                <div class="col-lg-4 col-sm-10 mt-2">
+                    <div class="card">
+                        <div class="card-body justify-content-md-end">
+                            <h5 class="card-title">Business</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional
+                                content.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-10 mt-2">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Techhnology</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional
+                                content.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-10 mt-2">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Science</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional
+                                content.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-10 mt-2">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">health</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional
+                                content.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </span>
     </div>
     <!--World Clock starts here-->
     <section class="world clock section-padding">
-        <div class="container">
+        <div class="container col-12 col-lg-10 mx-auto">
             <div class="row">
                 <div class="d-flex justify-content-center">
                     <div class="col-lg-12">
@@ -87,36 +135,101 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
+                    <div class="clock mb-30 text-center">
+                        <!--clock APi goes here-->
+                        <div class="clock">
+                            <image src="icons/Canada.png" alt=""></image>
+                            <div class="clock details">
+                                <h3 class>Canada</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
+                    <div class="clock mb-30 text-center">
+                        <!--clock APi goes here-->
+                        <div class="clock">
+                            <image src="icons/London.png" alt=""></image>
+                            <div class="clock details">
+                                <h3 class>London</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
     <!--My Broker starts here-->
-    <div class="container-fluid d-flex justify-content-center align-items-center vh-10" style="max-width: 50rem;">
-        <div class="row">
-            <div class="col-4 col-sm-4 mt-5">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Broker's Name</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Place Order</a>
-                    </div>
+    <div class="broker-container col-12 col-lg-10 mx-auto mt-5">
+        <div class="bg--info-subtle bg-gradient p-1">
+            <div class="broker-top-container">
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                    <button class="btn btn-primary me-md-2 bg-warning-subtle" type="add-button">Add</button>
+                    <button class="btn btn-primary me-md-2 bg-warning-subtle" type="delete-button">Delete</button>
+                    <button class="btn btn-primary bg-warning-subtle" type="edit-button">Edit</button>
                 </div>
             </div>
-            <div class="col-4 col-sm-4 mt-5">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Broker's Name</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Place Order</a>
+            <div class="row">
+                <div class="col-4 col-sm-4 mt-2">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Broker's Name</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional
+                                content.
+                            </p>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#staticBackdrop">
+                                Add Broker's
+                            </button>
+                            <!-- Modal -->
+                            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static"
+                                data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel"
+                                aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            ...
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-bs-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary">Understood</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-4 col-sm-4 mt-5">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Broker's Name</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Place Order</a>
+                <div class="col-4 col-sm-4 mt-2">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Broker's Name</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional
+                                content.
+                            </p>
+                            <a href="#" class="btn btn-primary">Place Order</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 col-sm-4 mt-2">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Broker's Name</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional
+                                content.
+                            </p>
+                            <a href="#" class="btn btn-primary">Place Order</a>
+                        </div>
                     </div>
                 </div>
             </div>
