--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="draggable" href="drag.js">
 </head>
-
+    <!-- Draggable DIV -->
+    <div id="mydiv">
+        <!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
+        <div id="mydivheader">Click here to move</div>
+        <p>Move</p>
+        <p>this</p>
+        <p>DIV</p>
+    </div>
 <body style="background-image: url('images/starry_night.jpeg');">
 
     <!--Weather Condition Display starts here-->
@@ -73,172 +81,112 @@
                         </div>
                     </div>
                 </div>
+
+
             </div>
         </span>
     </div>
+    <!--Test draggble-->
+
+
 
     <!--World Clock starts here-->
     <div class="world clock section-padding">
         <div class="container col-12 col-lg-10 mx-auto">
             <div class="container-content text-center">
-                
-                <div class="row">
-                        <div class="col-12">
-                            <h2>World Clcok</h2>
-                        </div>
-                    </div>
-                </div>
 
                 <div class="row">
-                    <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
-                        <div class="clock mb-30 text-center">
-                            <!--clock APi goes here-->
-                            <div class="clock">
-                                <image src="icons/new_york.png" alt=""></image>
-                                <div class="clock details">
-                                    <h3>New York</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
-                        <div class="clock mb-30 text-center">
-                            <!--clock APi goes here-->
-                            <div class="clock">
-                                <image src="icons/Singapore.png" alt=""></image>
-                                <div class="clock details">
-                                    <h3>Singapore</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
-                        <div class="clock mb-30 text-center">
-                            <!--clock APi goes here-->
-                            <div class="clock">
-                                <image src="icons/Australia.png" alt=""></image>
-                                <div class="clock details">
-                                    <h3>Australia</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
-                        <div class="clock mb-30 text-center">
-                            <!--clock APi goes here-->
-                            <div class="clock">
-                                <image src="icons/hong_kong.png" alt=""></image>
-                                <div class="clock details">
-                                    <h3 class>Hong Kong</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
-                        <div class="clock mb-30 text-center">
-                            <!--clock APi goes here-->
-                            <div class="clock">
-                                <image src="icons/Canada.png" alt=""></image>
-                                <div class="clock details">
-                                    <h3 class>Canada</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
-                        <div class="clock mb-30 text-center">
-                            <!--clock APi goes here-->
-                            <div class="clock">
-                                <image src="icons/London.png" alt=""></image>
-                                <div class="clock details">
-                                    <h3 class>London</h3>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="col-12">
+                        <h2>World Clcok</h2>
                     </div>
                 </div>
+            </div>
 
-            </div>
-        </div>
-    </div>
-    <!--My Broker starts here-->
-    <div class="broker-container col-12 col-lg-10 mx-auto mt-5">
-        <div class="bg--info-subtle bg-gradient p-1">
-            <div class="broker-top-container">
-                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                    <button class="btn btn-primary me-md-2 bg-warning-subtle" type="add-button">Add</button>
-                    <button class="btn btn-primary me-md-2 bg-warning-subtle" type="delete-button">Delete</button>
-                    <button class="btn btn-primary bg-warning-subtle" type="edit-button">Edit</button>
-                </div>
-            </div>
             <div class="row">
-                <div class="col-4 col-sm-4 mt-2">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Broker's Name</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional
-                                content.
-                            </p>
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
-                                Add Broker's
-                            </button>
-                            <!-- Modal -->
-                            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static"
-                                data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel"
-                                aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                            ...
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary"
-                                                data-bs-dismiss="modal">Close</button>
-                                            <button type="button" class="btn btn-primary">Understood</button>
-                                        </div>
-                                    </div>
-                                </div>
+                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
+                    <div class="clock mb-30 text-center">
+                        <!--clock APi goes here-->
+                        <div class="clock">
+                            <image src="icons/new_york.png" alt=""></image>
+                            <div class="timebox" id="newYork">
+                                <h3 class="text-light">New York</h3>
+                                <p class="text-light" id="newyorkTime"></p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-4 col-sm-4 mt-2">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Broker's Name</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional
-                                content.
-                            </p>
-                            <a href="#" class="btn btn-primary">Place Order</a>
+
+                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
+                    <div class="clock mb-30 text-center">
+                        <!--clock APi goes here-->
+                        <div class="clock">
+                            <image src="icons/Singapore.png" alt=""></image>
+                            <div class="timebox" id="singapore">
+                                <h3 class="text-light">Singapore</h3>
+                                <p class="text-light" id="singaporeTime"></p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-4 col-sm-4 mt-2">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Broker's Name</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional
-                                content.
-                            </p>
-                            <a href="#" class="btn btn-primary">Place Order</a>
+
+
+                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
+                    <div class="clock mb-30 text-center">
+                        <!--clock APi goes here-->
+                        <div class="clock">
+                            <image src="icons/Australia.png" alt=""></image>
+                            <div class="timebox" id="australia">
+                                <h3 class="text-light">Australia</h3>
+                                <p class="text-light" id="australiaTime"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
+                    <div class="clock mb-30 text-center">
+                        <!--clock APi goes here-->
+                        <div class="clock">
+                            <image src="icons/hong_kong.png" alt=""></image>
+                            <div class="timebox" id ='hongKong'>
+                                <h3 class="text-light">Hong Kong</h3>
+                                <p class="text-light" id="hkTime"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
+                    <div class="clock mb-30 text-center">
+                        <!--clock APi goes here-->
+                        <div class="clock">
+                            <image src="icons/Canada.png" alt=""></image>
+                            <div class="timebox" id="canada">
+                                <h3 class="text-light">Canada</h3>
+                                <p  class="text-light"id="canTime"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
+                    <div class="clock mb-30 text-center">
+                        <!--clock APi goes here-->
+                        <div class="clock">
+                            <image src="icons/London.png" alt=""></image>
+                            <div class="timebox" id="London">
+                                <h3 class="text-light">London</h3>
+                                <p class="text-light" id="londonTime"></p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
+    
+
 
     <!--Stock, FX, BTC starts here-->
     <div id="container">
@@ -316,17 +264,13 @@
                                 Select files to upload:
                                 <input type="file" name="files[]" multiple>
                                 <input type="submit" value="Upload">
-                              </form>
+                            </form>
                         </div>
 
                     </div>
                 </div>
             </div>
         </div>
-
-
-
-
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -338,6 +282,9 @@
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="data.js"></script>
         <script src="script.js"></script>
+        <script src="drag.js"></script>
+
 </body>
+
 
 </html>
